<LinearLayout
    android:id="@+id/containerView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/choiceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/button_pressed_is" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one" />

    <Button
        android:id="@+id/goOneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two" />

    <Button
        android:id="@+id/goTwoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three" />

    <Button
        android:id="@+id/goThreeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

    <Button
        android:id="@+id/goLastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_last" />
</LinearLayout>