<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <Button
        android:id="@+id/goBlueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    <Button
        android:id="@+id/goRedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green" />

    <Button
        android:id="@+id/goGreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none" />
</LinearLayout>